infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fams
  labels:
    app.kubernetes.io/name: fams
