infra/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fams-api
  namespace: fams
spec:
  selector:
    app: fams-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
