infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fams-api
  namespace: fams
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.fams.falcon-college.edu.pk
      secretName: fams-api-tls
  rules:
    - host: api.fams.falcon-college.edu.pk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fams-api
                port:
                  number: 80
